get things working on Fedora 32

--- a/list_physical_gpu_devices.ipynb
+++ b/list_physical_gpu_devices.ipynb
@@ -2,35 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tensorflow as tf\n",
-    "\n",
-    "physical_devices = tf.config.experimental.list_physical_devices() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU'),\n",
-       " PhysicalDevice(name='/physical_device:XLA_CPU:0', device_type='XLA_CPU'),\n",
-       " PhysicalDevice(name='/physical_device:XLA_GPU:0', device_type='XLA_GPU')]"
+       "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "physical_devices"
+    "import tensorflow as tf\n",
+    "\n",
+    "tf.config.list_physical_devices('GPU') "
    ]
   }
  ],
@@ -50,7 +39,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
